--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -23,8 +23,8 @@
 			android:layout_width="wrap_content"
 			style="?android:attr/buttonBarButtonStyle"
 			android:layout_height="match_parent"
-			android:text="Load"
-			android:id="@+id/repo_load_btn"/>
+			android:text="Status"
+			android:id="@+id/status_btn"/>
 
 	</LinearLayout>
 
