feat: show history (git log) via dialog

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -27,7 +27,14 @@
 			android:id="@+id/status_btn"/>
 
 	</LinearLayout>
-
+    
+    <Button
+        android:layout_width="match_parent"
+        style="?android:attr/buttonBarButtonStyle"
+        android:layout_height="wrap_content"
+        android:text="History"
+		android:id="@+id/history_btn"/>
+    
 	<TextView
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
